# chat_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  index.js
assets/: chats.css  dom.js  dropdown.css  globals.css  header.css  htmx-loading.min.js  loading.css  login.css  sign_in.css  universal.js
db/sqlx/migrations/: 20240203031240_create_user.sql  20240203031330_create_user_credentials.sql  20240203035540_create_user_index.sql  20240206151840_alter_user_create_type_user_role_enum_create_type_gender_enum_create_type_user_status_enum_create_unique_index_creation_date_gender_role_status_last_login_date.sql  20240206235250_create_table_friendships_user_blocks_alter_table_add_column_profile_pictures_create_index.sql  20240207233440_create_user_chats_create_index_user_chats.sql
src/: consts.rs  db.rs  lib.rs  main.rs
src/api/: search.rs
src/catchers/: mod.rs
src/chats/: chat_struct.rs  mod.rs
src/cookies/: mod.rs  session.rs  settings.rs
src/errors/: error.rs
src/pages/: homepage.rs  mod.rs
src/pages/auth/: _utils.rs  index.rs  login.rs  macro_rule.rs  mod.rs  register.rs
src/pages/auth/api/: login.rs  logout.rs  register.rs
src/pages/chats/: index.rs  macro_rule.rs  mod.rs
src/pages/chats/api/: chats_of_user.rs  mod.rs
src/user/: actions.rs  mod.rs  user_struct.rs
src/utils/: custom_redirect.rs  env.rs  mod.rs
templates/: auth.html.hbs  chats.html.hbs  error.html.hbs  index.html.hbs  login.html.hbs  register.html.hbs  session.html.hbs
