[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.4", features=["handlebars"] }
dotenv = "0.15"
serde_json = "1.0.113"
serde = "1.0.196"
postgres = "0.19.7"
bcrypt = "0.15.0"
tokio = "1.36.0"
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
sqlx = { version = "0.7.3", features = ["macros", "migrate"] }
image = "0.24.8"
rocket-multipart-form-data = "0.10.7"
cloudinary = "0.4.0"